<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appbar_layout_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/collapsing_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_220"
                android:contentDescription="@string/collapsing_image"
                android:fitsSystemWindows="true"
                android:scaleType="fitCenter"
                android:src="@drawable/github_header"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/avatar_details_image"
                style="@style/DetailsAvatar"
                android:contentDescription="@string/avatar_details_image"
                app:layout_constraintBottom_toTopOf="@+id/description_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/language_text"
                style="@style/DetailsLanguageText"
                tools:text="Java" />

            <TextView
                android:id="@+id/description_text"
                style="@style/DetailsDescriptionText"
                app:layout_constraintTop_toBottomOf="@+id/avatar_details_image"
                tools:text="description " />

            <TextView
                android:id="@+id/created_text"
                style="@style/DetailsCreatedText"
                app:layout_constraintTop_toBottomOf="@+id/description_text"
                tools:text="Created: 2017.03.13 21:33:02" />

            <TextView
                android:id="@+id/last_updated_text"
                style="@style/DetailsLastUpdatedText"
                app:layout_constraintTop_toBottomOf="@+id/created_text"
                tools:text="Last Updated: 201.03.13 21:33:02" />

            <ImageView
                android:id="@+id/watcher_icon"
                style="@style/DetailsGitHubIcons"
                android:contentDescription="@string/details_watcher_icon"
                android:src="@drawable/watcher"
                app:layout_constraintEnd_toStartOf="@+id/star_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_updated_text" />

            <TextView
                android:id="@+id/watcher_count"
                style="@style/DetailsGitHubIconText"
                app:layout_constraintEnd_toEndOf="@+id/watcher_icon"
                app:layout_constraintStart_toStartOf="@+id/watcher_icon"
                app:layout_constraintTop_toBottomOf="@+id/watcher_icon"
                tools:text="3000" />

            <ImageView
                android:id="@+id/star_icon"
                style="@style/DetailsGitHubIcons"
                android:contentDescription="@string/details_star_icon"
                android:src="@drawable/star"
                app:layout_constraintEnd_toEndOf="@+id/fork_icon"
                app:layout_constraintStart_toStartOf="@+id/watcher_icon"
                app:layout_constraintTop_toBottomOf="@+id/last_updated_text" />

            <TextView
                android:id="@+id/star_count"
                style="@style/DetailsGitHubIconText"
                app:layout_constraintEnd_toEndOf="@+id/star_icon"
                app:layout_constraintStart_toStartOf="@+id/star_icon"
                app:layout_constraintTop_toBottomOf="@+id/star_icon"
                tools:text="2000" />

            <ImageView
                android:id="@+id/fork_icon"
                style="@style/DetailsGitHubIcons"
                android:contentDescription="@string/details_fork_icon"
                android:src="@drawable/fork"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/star_icon"
                app:layout_constraintTop_toBottomOf="@+id/last_updated_text" />

            <TextView
                android:id="@+id/fork_count"
                style="@style/DetailsGitHubIconText"
                app:layout_constraintEnd_toEndOf="@+id/fork_icon"
                app:layout_constraintStart_toStartOf="@+id/fork_icon"
                app:layout_constraintTop_toBottomOf="@+id/fork_icon"
                tools:text="1000" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>